fix: H1 text did not align right on landing page.

--- a/envited-test/src/assets/css/styles.css
+++ b/envited-test/src/assets/css/styles.css
@@ -4,7 +4,6 @@ body {
 
 .landing-heading p {
     color: #4f4f4f;
-    text-align: center;
     font-size: 24px;
     font-weight: 300;
 }
